--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vite + Svelte</title>
   </head>
   <body>
+    <div data-ai-content="generated">Loading...</div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
