add position attribute to notices and update documentation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + Svelte</title>
   </head>
   <body>
-    <div data-ai-content="generated">Loading...</div>
+    <div data-ai-content="generated" data-agcn-position="right">Loading...</div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
