--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Vite + Svelte</title>
   </head>
   <body>
-    <div data-ai-content="generated" data-agcn-position="right">Loading...</div>
+    <div data-ai-content="test" data-agcn-position="right">Loading...</div>
+    <div data-ai-content="test2" data-agcn-position="right">Loading...</div>
+    <div data-ai-content data-agcn-position="right">Loading...</div>
     <script type="module" src="/src/main.js"></script>
+  
   </body>
 </html>
